<resources>
    <string name="app_name"><b>MOCO</b></string>
    <string name="splash_txt"><b>일상의 새로움</b></string>

    <string name="login">로그인</string>
    <string name="join">회원가입</string>
    <string name="serial_num">시리얼 번호</string>
    <string name="phone_num">핸드폰 번호</string>

    <string name="intro2_1">MOCO가 처음이신가요?</string>
    <string name="intro2_2">첫 구매고객 50% 할인</string>

    <string name="intro3_1">언제 어디서나</string>
    <string name="intro3_2">스마트폰 하나로</string>
    <string name="intro3_3">모션인식으로</string>
    <string name="intro3_4">편리한 디바이스 컨트롤</string>

    <string name="main1">주변에 연결할 수 있는</string>
    <string name="main2">제품이 있나요?</string>
    <string name="main3">등록해서 사용해 볼까요?</string>


    <string name="id">아이디</string>
    <string name="pw">비밀번호</string>
    <string name="find"><u>가입정보 찾기</u></string>

    <string name="news">MOCO의 새로운 소식!</string>
    <string name="announcement">공지사항</string>

    <string name="my_device">연결된 기기 목록</string>
    <string name="mypage">My Page</string>

    <string name="find_join_title">※정보 찾기</string>
    <string name="find_join_content1">가입하신 정보는 입력하신 번호로 문자발송</string>
    <string name="find_join_content2"> 됩니다. 아이디와 비밀번호가 함께 전송되며</string>
    <string name="find_join_content3">로그인 후 비밀번호 변경을 권장합니다.</string>

    <string name="privacy_title">[공지] MOCO 개인정보처리방침 개정 안내</string>
    <string name="privacy_content1">안녕하세요, MOCO입니다.</string>
    <string name="privacy_content2">MOCO를 이용해주시는 회원분들께 감사드리며, 더욱 정확하고 안전한 모션인식 서비스 제공을 위해 MOCO 개인정보처리방침이 개정될 예정입니다. 서비스 이용에 참고 부탁드립니다.</string>

</resources>